# fastsecrets

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: test.yml
python/tests/: test_all.py
src/: lib.rs
src/secrets/: basic_auth.rs  digitalocean.rs  discord.rs  gitlab.rs  npm.rs  pypi.rs  slack.rs  stripe.rs  twilio.rs
