[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "fastsecrets"
description = "Simple and fast secret detection. Scan strings and files for secret keys, API tokens, and credentials."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [
    { name = "Adam Bronte", email = "adam@corgea.com" }
]

[project.urls]
Homepage = "https://github.com/Corgea/fastsecrets"
Documentation = "https://github.com/Corgea/fastsecrets"
Repository = "https://github.com/Corgea/fastsecrets"
Issues = "https://github.com/Corgea/fastsecrets/issues"
Changelog = "https://github.com/Corgea/fastsecrets/releases"

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.scripts]
fastsecrets = "fastsecrets.cli:main"

[tool.maturin]
python-source = "python"
